--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>Remlad Tailwind Course</title>
   </head>
   <body class="w-full rounded border-solid border-2">
@@ -48,25 +48,25 @@
      </div>
      </div>
   <div class="right md:w-1/2 py-10">
-    <img src="./image.webp" class="w-full  rounded border-solid border-2 rounded shadow-xl" alt="">
+    <img src="./dist/image.webp" class="w-full  rounded border-solid border-2 rounded shadow-xl" alt="">
   </div>
 </section>
 <!-- features -->
 <section class="md:flex px-4 py-10 md:p-10 bg-indigo-800 text-indigo-200 items-stretch">
   <div class="flex-1 mr-2 mb-4 text-center">
-    <img src="./01.jpg" alt=""  class=" mb-2 md:mb-0 object-contain w-full rounded border-solid border-2 border-indigo-400">
+    <img src="./dist/01.jpg" alt=""  class=" mb-2 md:mb-0 object-contain w-full rounded border-solid border-2 border-indigo-400">
     <p>Future for ALl</p>
   </div>
   <div class="flex-1 mr-2 mb-4 text-center mt-8">
-    <img src="./02.jpg" alt="" class=" mb-2 md:mb-0 object-contain w-full rounded border-solid border-2 border-indigo-400">
+    <img src="./dist/02.jpg" alt="" class=" mb-2 md:mb-0 object-contain w-full rounded border-solid border-2 border-indigo-400">
     <p>Go Green</p>
   </div>
   <div class="flex-1 mr-2 mb-4 text-center">
-    <img src="./04.jpg" alt="" class=" mb-2 md:mb-0 object-contain w-full rounded border-solid border-2 border-indigo-400">
+    <img src="./dist/04.jpg" alt="" class=" mb-2 md:mb-0 object-contain w-full rounded border-solid border-2 border-indigo-400">
     <p>Preserve Animal</p>
   </div>
   <div class="flex-1 mr-2 mb-4 text-center mt-8">
-    <img src="./05.jpg" alt="" class=" mb-2 md:mb-0 object-contain w-full rounded border-solid border-2 border-indigo-400">
+    <img src="./dist/05.jpg" alt="" class=" mb-2 md:mb-0 object-contain w-full rounded border-solid border-2 border-indigo-400">
     <p>Save Forest</p>
   </div>
 </section>
